# XActivityMonitor

./: .gitignore  README.md
client/: CMakeLists.txt
client/include/: config.h  http_client.h  json_payload.h  state.h  time_utils.h  xrecord_listener.h
client/src/: http_client.c  json_payload.c  main.c  state.c  time_utils.c  xrecord_listener.c
server/: .env.example  Dockerfile  api.py  pyproject.toml
server/src/: constants.py  db.py  helpers.py  main.py
server/tests/: conftest.py  test_db.py  test_helpers.py
