[project]
name = "activity-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "flask-cors",
    "flask-limiter",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
